--- a/server/env.example
+++ b/server/env.example
@@ -10,4 +10,5 @@ HF_API_KEY=your_huggingface_api_key_here
 HF_API_URL=https://api-inference.huggingface.co/models/your_model_name
 
 # Server Configuration
-PORT=5173
+# Note: Frontend proxy is configured for port 3001
+PORT=3001
