--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "wrangler dev",
-    "deploy": "wrangler deploy"
+    "deploy": "wrangler deploy",
+    "build": "wrangler deploy --dry-run"
   },
   "dependencies": {
     "cors": "^2.8.5",
