--- a/server/wrangler.toml
+++ b/server/wrangler.toml
@@ -5,7 +5,7 @@ compatibility_date = "2025-08-18"
 [vars]
 MODEL_PROVIDER = "openai"
 OPENAI_API_KEY = "your-openai-key-here"
-OPENAI_MODEL = "gpt-5-nano"
+OPENAI_MODEL = "gpt-4o-mini"
 HF_API_URL = ""
 HF_API_KEY = ""
 
