--- a/server/wrangler.toml
+++ b/server/wrangler.toml
@@ -9,7 +9,7 @@ OPENAI_MODEL = "gpt-4o-mini"
 HF_API_URL = ""
 HF_API_KEY = ""
 CLOUDFLARE_ACCOUNT_ID="9e20a2d23e8227768214ace8238988ed"
-CLOUDFLARE_API_TOKEN="3pY21gPkOtB2nE_kB52QIKiSiM0910yy1b9A5N8d"
+CLOUDFLARE_API_TOKEN=""
 CLOUDFLARE_MODEL="@cf/meta/llama-3-8b-instruct"
 
 # wrangler.toml (wrangler v3.88.0^)
